Proyectos y practicas/3º/PL/PL-Practica-Final-AJS/PL_P2_AGUILAR_RODRIGUEZ/tests/propios/validos/test7.ajs

let num = 3;

let a = tr;


if (num==3){
    let casa = 12;
}
else{
    let casa = 13;
}