Proyectos y practicas/3º/PL/PL-Practica-Final-AJS/PL_P2_AGUILAR_RODRIGUEZ/tests/propios/invalidos_sintaxis/test4.ajs

// Control de flujo vacíos


if (true) {
}
else {
}

while (true) {
}


if () {
    a = 2;
}
else {
    a = 2;
}

while () {
    a = 2;
}

